apps/backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-backend
spec:
  rules:
  - http:
      paths:
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: backend
      #       port:
      #         number: 8080
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
